@@ -70,6 +70,10 @@ rm -f make-bundle
 popd
 # back in $dir
 
+# diff -ru orig-8.3pl2 patch-8.3pl2 \
+#     | grep -v '^Only in' \
+#     | sed -e "s/^+++ patch-8.3pl2/+++ coq-8.3pl2/" \
+#     > patch-file-8.3pl2
 
 coq_patch_dir=coq-patch-$coqversion
 mkdir $coq_patch_dir
