@@ -19,35 +19,101 @@
  * You should have received a copy of the GNU General Public License
  * along with "prooftree". If not, see <http://www.gnu.org/licenses/>.
  * 
- * $Id: proof_tree.ml,v 1.20 2011/08/12 12:29:02 tews Exp $
+ * $Id: proof_tree.ml,v 1.21 2011/09/15 08:16:27 tews Exp $
  *)
 
 
-(** Internal representation of proof trees with undo info *)
+(** Internal representation of proof trees with undo info 
 
+    This module processes the proof-tree display commands that are
+    read from standard input. It keeps a state record (of type
+    {!proof_tree}) for all proof trees currently displayed. 
+*)
 
 open Util
 open Configuration
 open Draw_tree
 open Proof_window
 
+
+(** Internal exception for state mismatches. This exception is raised
+    when the internal state of one proof tree in this module is
+    inconsistent with the proof-tree display command that has been
+    read. In a correct setup (with the right Proof General version)
+    such an error indicates a bug in either prooftree or in the Proof
+    General preprocessing code. This exception can also be raised if
+    prooftree is used with a wrong version of Proof General or if
+    somebody manipulates the internal data structures of Proof
+    General.
+*)
 exception Proof_tree_error of string
+
 
 type proof_tree = {
   window : proof_window;
-  proof_name : string;
+  (** The window displaying this tree. *)
+
+  proof_name : string; 
+  (** The name of the proof *)
+
   pa_start_state : int;
-  mutable pa_end_state : int;		(* -1 if not finished yet *)
+  (** Internal proof assistant state number where this proof starts. 
+      Used to detect bulk undos.
+  *)
+
+  mutable pa_end_state : int;
+  (** Internal proof assistant state number where this proof finishes,
+      or [-1] if this proof is not finished yet. Used to speed up undo
+      processing.
+  *)
+
   mutable cheated : bool;
+  (** [true] if a cheating command has been used somewhere in the proof. *)
+
   sequent_hash : (string, turnstile) Hashtbl.t;
+  (** Hash table mapping all currently known sequents of this proof
+      tree to {!Draw_tree.turnstile} objects. Used to detect new
+      sequents and to update sequents.
+  *)
+
   mutable current_sequent_id : string;
+  (** The ID of the current sequent. Needed to distinguish the
+      peculiar case, where a non-failing proof command (such as
+      [auto]) does not change the proof state. 
+  *)
+
   mutable current_sequent : proof_tree_element;
+  (** The object of the current sequent. Used for coloring branches. *)
+
   mutable other_open_goals : string list;
+  (** List containing the ID's of all open goals, except for
+      {!current_sequent_id}. *)
+
   mutable need_redraw : bool;
+  (** [true] if the display needs a redraw. Used to delay redrawing. *)
+
   mutable undo_actions : (int * (unit -> unit) list) list;
+(** List of undo actions for this proof tree. Each element has the
+    form [(state, action_list)], where [action_list] is the list of
+    undo actions that must be performed if the user retracts to a
+    state equal or lesser than [state].
+*)
 }
+(** State record for displayed proof trees. The code maintains the
+    following invariants.
+    {ul 
+    {- Each live state is in precisely one the lists
+    {!all_proof_trees_for_undo}, {!undo_surviver_trees} or
+    {!Proof_window.cloned_proof_windows}.}
+    {- {!current_sequent_id} is never contained in {!other_open_goals}}
+    }
+*)
 
 
+(** Add an undo action to the current state [pa_state] of the proof
+    [pt]. This action is performed if the user retracts to a state
+    equal or lesser than [pa_state].
+*)
 let add_undo_action pt pa_state undo_fun =
   match pt.undo_actions with
     | [] -> pt.undo_actions <- [(pa_state, [undo_fun])]
@@ -76,6 +142,10 @@ let all_proof_trees_for_undo = ref []
 let undo_surviver_trees = ref []
 
 
+(** Take the necessary actions when the configuration record changed.
+    Calls the {!Proof_window.proof_window.configuration_updated}
+    method on all live proof windows.
+*)
 let configuration_updated () =
   List.iter (fun pt -> pt.window#configuration_updated) 
     !all_proof_trees_for_undo;
@@ -85,19 +155,36 @@ let configuration_updated () =
     !cloned_proof_windows
 
 
+(** Holds the state for the currently active proof window, if any.
+    Mainly used for {!finish_drawing} to delay redrawing.
+*)
 let current_proof_tree = ref None
 
 
+(** Finishes proof tree [pt] by leaving the current branch open.
+    Additionally clear {!current_proof_tree}.
+*)
 let stop_proof_tree pt pa_state = 
   (* Keep undo actions, never know if the prover supports jumping in
    * to the middle of a proof.
    *)
   pt.pa_end_state <- pa_state;
   pt.window#disconnect_proof;
-  pt.window#set_selected_node (Some pt.current_sequent);
   pt.window#refresh_and_position;
   pt.need_redraw <- false;
   current_proof_tree := None
+
+
+(** Same as {!stop_proof_tree} but make the current sequent the
+    selected one, if there is no selected sequent.
+*)
+let stop_proof_tree_last_selected pt pa_state =
+  (match pt.window#get_selected_node with
+    | None -> 
+      add_undo_action pt pa_state (fun () -> pt.window#set_selected_node None);
+      pt.window#set_selected_node (Some pt.current_sequent);
+    | Some _ -> ());
+  stop_proof_tree pt pa_state
 
 
 (** Result values for [undo_tree] that tell the calling function
@@ -110,6 +197,10 @@ type proof_tree_undo_result =
   | PT_undo_surviver  (** Argument proof tree should be kept as surviver *)
 
 
+(** Process all undo actions with a state greater or equal than
+    [undo_state]. Return the list of unprocessed undo actions (with
+    state strictly less than [undo_state]).
+*)
 let rec fire_undo_actions undo_state = function
   | [] -> []
   | ((state, undos) :: undo_rest) as undo_list ->
@@ -120,6 +211,19 @@ let rec fire_undo_actions undo_state = function
     end else
       undo_list
 
+
+(** Perform undo actions in proof tree [pt] to reach state [pa_state].
+    This means that either 
+    {ul
+    {- nothing is done (because [pt] was finished in a state less than
+    [pa_state]),}
+    {- some of the nodes in [pt] are deleted,}
+    {- the complete window belonging to [pt] is deleted, or}
+    {- no node of [pt] is deleted and pt is kept as surviver (because
+    a bulk undo with a state less than the starting state of [pt] was
+    detected.)}
+    }
+*)
 let undo_tree pt pa_state =
   if pa_state <= pt.pa_start_state
   then begin
@@ -147,6 +251,14 @@ let undo_tree pt pa_state =
     PT_undo_current
   end
 
+
+(** Perform undo to state [pa_state] in all proof trees currently
+    affected by undo ({!all_proof_trees_for_undo}). As result some of
+    the proof windows might get deleted, some proof trees might get
+    changed, and some might be kept as surviver (in
+    {!undo_surviver_trees}). {!current_proof_tree} might be cleared or
+    changed.
+*)
 let undo pa_state =
   let new_current = ref None in
   all_proof_trees_for_undo :=
@@ -165,6 +277,10 @@ let undo pa_state =
   current_proof_tree := !new_current
 
 
+(** Try to find a surviver proof window for [proof_name]. If found, it
+    is dequeued from the surviver list ({!undo_surviver_trees}) and
+    returned. (The caller will then reuse it.)
+*)
 let get_surviver proof_name =
   let rec doit res = function
     | [] -> None
@@ -178,8 +294,13 @@ let get_surviver proof_name =
   in
   doit [] !undo_surviver_trees
 
+
+(** Create a new proof-tree state (especially a new proof-tree window)
+    for [proof_name] with starting state [state] and initial sequent
+    [current_sequent].
+*)
 let create_new_proof_tree proof_name state 
-                                     current_sequent_id current_sequent_text =
+    current_sequent_id current_sequent_text =
   let pt_win = make_proof_window proof_name !geometry_string in
   let sw = pt_win#new_turnstile current_sequent_id current_sequent_text in
   let hash = Hashtbl.create 503 in
@@ -201,6 +322,10 @@ let create_new_proof_tree proof_name state
   pt_win#set_root sw;
   pt
 
+
+(** Initialize a surviver proof-tree state (and window) for reuse with
+    the initial sequent [current_sequent] and start state [state].
+*)
 let reuse_surviver pt state current_sequent_id current_sequent_text =
   let pt_win = pt.window in
   let proof_name = pt.proof_name in
@@ -227,6 +352,11 @@ let reuse_surviver pt state current_sequent_id current_sequent_text =
   pt_win#message "";
   pt
 
+
+(** Start a new proof [proof_name] with [current_sequent] as initial
+    sequent in state [state]. If a surviver proof tree is found it is
+    reused. Otherwise a new proof-tree state and window is created.
+*)
 let start_new_proof state proof_name current_sequent_id current_sequent_text =
   assert(List.for_all 
 	   (fun pt -> pt.proof_name <> proof_name) !all_proof_trees_for_undo);
@@ -246,6 +376,19 @@ let start_new_proof state proof_name current_sequent_id current_sequent_text =
   all_proof_trees_for_undo := pt :: !all_proof_trees_for_undo
 
 
+(** Add a new proof command with the new current sequent
+    [current_sequent] and the additionally spawned subgoals. The
+    additionally spawned subgoals are computed from [additional_ids]
+    which must contain the ID's of all new subgoals (except for
+    [current_sequent_id]). Old, currently unfinished subgoals in
+    [additional_ids] are filtered out with the help of
+    [pt.other_open_goals]. Except for the [current_sequent], the newly
+    created subgoals contain no sequent text yet. This is expected to
+    arrive soon with an [update-sequent] command.
+
+    [cheated_flag] is asserted to be false, because the code assumes
+    that a cheating command solves the current subgoal.
+*)
 let add_new_goal pt state proof_command cheated_flag 
     current_sequent_id current_sequent_text additional_ids =
   assert(cheated_flag = false);
@@ -304,9 +447,9 @@ let add_new_goal pt state proof_command cheated_flag
     old_current_sequent#mark_current;
     List.iter (fun id -> Hashtbl.remove pt.sequent_hash id) unhash_sequent_ids;
     List.iter 
-      (fun sw -> if sw#is_selected then pt.window#clear_selected_node)
+      (fun sw -> if sw#is_selected then pt.window#set_selected_node None)
       all_subgoals;
-    if pc#is_selected then pt.window#clear_selected_node;
+    if pc#is_selected then pt.window#set_selected_node None;
     pt.current_sequent_id <- old_current_sequent_id;
     pt.current_sequent <- old_current_sequent;
     pt.other_open_goals <- old_other_open_goals;
@@ -315,6 +458,12 @@ let add_new_goal pt state proof_command cheated_flag
   pt.need_redraw <- true
 
 
+(** Add [proof_command] as final command, which solved the current
+    goal, to the current branch. If [cheated_flag] is set, the branch
+    is marked as cheated. This function only finishes the current
+    branch, moving to the next open subgoal (if necessary) is done by
+    {!internal_switch_to}.
+*)
 let finish_branch pt state proof_command cheated_flag =
   let pc = pt.window#new_proof_command proof_command in
   let pc = (pc :> proof_tree_element) in
@@ -335,6 +484,14 @@ let finish_branch pt state proof_command cheated_flag =
   if cheated_flag then pt.cheated <- true;
   pt.need_redraw <- true
 
+
+(** Switch to [new_current_sequent_id], that is, mark this sequent as
+    the current one. If [old_open_sequent_id] equals [None] the switch
+    occurs because the preceeding current sequent has been solved.
+    Otherwise, there is a real focus switch and [old_open_sequent_id]
+    contains the old current sequent, which is marked as normal open
+    goal now.
+*)
 let internal_switch_to pt state old_open_sequent_id new_current_sequent_id =
   assert(match old_open_sequent_id with 
     | None -> true
@@ -371,6 +528,9 @@ let internal_switch_to pt state old_open_sequent_id new_current_sequent_id =
   pt.need_redraw <- true
 
 
+(** Finish the current branch with [proof_command] and switch to
+    [current_sequent] as next current sequent.
+*)
 let finish_branch_and_switch_to pt state proof_command cheated_flag
     current_sequent_id additional_ids =
   assert(not (List.mem current_sequent_id additional_ids));
@@ -390,12 +550,14 @@ let finish_branch_and_switch_to pt state proof_command cheated_flag
   in
   pt.window#message message
 
+
+(* See mli for doc *)
 let process_current_goals state proof_name proof_command cheated_flag
     current_sequent_id current_sequent_text additional_ids =
   (match !current_proof_tree with
     | Some pt -> 
       if pt.proof_name <> proof_name 
-      then stop_proof_tree pt state
+      then stop_proof_tree_last_selected pt state
     | None -> ());
   match !current_proof_tree with
     | None -> 
@@ -413,15 +575,25 @@ let process_current_goals state proof_name proof_command cheated_flag
 	  current_sequent_text additional_ids
 
 
+(** Update the sequent text for some sequent. This function is used
+    for both, setting the new sequent text as well as reseting to the
+    old sequent text in the undo action. 
+*)
 let change_sequent_text proof_window sequent text () =
   sequent#update_sequent text;
   if sequent#is_selected then proof_window#refresh_sequent_area
 
+
+(** Udate the sequent text for some sequent text and set an
+    appropriate undo action.
+*)
 let update_sequent_element pt state sw sequent_text =
   let old_sequent_text = sw#content in
   change_sequent_text pt.window sw sequent_text ();
   add_undo_action pt state (change_sequent_text pt.window sw old_sequent_text)  
 
+
+(* See mli for doc *)
 let update_sequent state proof_name sequent_id sequent_text =
   match !current_proof_tree with
     | None ->
@@ -437,6 +609,7 @@ let update_sequent state proof_name sequent_id sequent_text =
 	  raise (Proof_tree_error "Update unknown sequent")
 
 
+(* See mli for doc *)
 let switch_to state proof_name new_current_sequent_id =
   match !current_proof_tree with
     | None ->
@@ -471,7 +644,7 @@ let process_proof_complete state proof_name proof_command cheated_flag =
 	  !proved_gdk_color
       in
       pt.window#message message;
-      stop_proof_tree pt state
+      stop_proof_tree_last_selected pt state
 
 
 let quit_proof proof_name =
@@ -498,6 +671,6 @@ let finish_drawing () = match !current_proof_tree with
   | Some pt -> 
     if pt.need_redraw then 
       pt.window#refresh_and_position;
-      pt.need_redraw <- false
-	
+    pt.need_redraw <- false
+      
 
