@@ -1,3 +1,8 @@
+2011-09-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* fix a current node position bug
+	* some more doc strings
+
 2011-08-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* fix to delete external node windows when retracting
